// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Next Steps Component does not render when title is empty 1`] = `
<div>
  


</div>
`;

exports[`Next Steps Component renders with link when provided 1`] = `
<div>
  

  
  <div
    class="ct-next-step ct-theme-light  "
    href=""
  >
    
    
    <div
      class="container"
    >
      
      
      <div
        class="row"
      >
        
        
        <div
          class="col-xxs-12"
        >
          
          
          <div
            class="ct-next-step__wrapper"
          >
            
                                      
                                          
            <div
              class="ct-next-step__inner"
            >
              
                                                            
                      


  
              <h4
                class="ct-heading ct-theme-light ct-next-step__title"
              >
                                                                  


  
  
                <a
                  class="ct-link ct-theme-light     ct-next-step__title__link"
                  href="https://example.com"
                >
                  

    
              
      
                  
                              
          
                    
          
                                
          
          
          
          Next Steps Title


                                    
                  <svg
                    aria-hidden="true"
                    class="ct-icon  ct-link__icon"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    

                    <path
                      d="M17.92 11.62C17.8724 11.4973 17.801 11.3851 17.71 11.29L12.71 6.29C12.6168 6.19676 12.5061 6.1228 12.3842 6.07234C12.2624 6.02188 12.1319 5.99591 12 5.99591C11.7337 5.99591 11.4783 6.1017 11.29 6.29C11.1968 6.38324 11.1228 6.49393 11.0723 6.61575C11.0219 6.73758 10.9959 6.86814 10.9959 7C10.9959 7.2663 11.1017 7.5217 11.29 7.71L14.59 11H7C6.73478 11 6.48043 11.1054 6.29289 11.2929C6.10536 11.4804 6 11.7348 6 12C6 12.2652 6.10536 12.5196 6.29289 12.7071C6.48043 12.8946 6.73478 13 7 13H14.59L11.29 16.29C11.1963 16.383 11.1219 16.4936 11.0711 16.6154C11.0203 16.7373 10.9942 16.868 10.9942 17C10.9942 17.132 11.0203 17.2627 11.0711 17.3846C11.1219 17.5064 11.1963 17.617 11.29 17.71C11.383 17.8037 11.4936 17.8781 11.6154 17.9289C11.7373 17.9797 11.868 18.0058 12 18.0058C12.132 18.0058 12.2627 17.9797 12.3846 17.9289C12.5064 17.8781 12.617 17.8037 12.71 17.71L17.71 12.71C17.801 12.6149 17.8724 12.5028 17.92 12.38C18.02 12.1365 18.02 11.8635 17.92 11.62Z"
                    />
                    

                  </svg>
                  

                  
      
      
                </a>
                
                                              
              </h4>
              
                                      
                                      


              <div
                class="ct-paragraph ct-theme-light ct-paragraph--regular ct-next-step__content"
              >
                
    This is the content of the next steps.  
              </div>
                                                
            </div>
            
                          
                                                
          </div>
          
        
        </div>
        
      
      </div>
      
    
    </div>
    
  
  </div>
  

</div>
`;

exports[`Next Steps Component renders with optional attributes 1`] = `
<div>
  

  
  <div
    class="ct-next-step ct-theme-dark ct-vertical-spacing-inset--both custom-class"
    data-test="true"
    href=""
  >
    
    
    <div
      class="container"
    >
      
      
      <div
        class="row"
      >
        
        
        <div
          class="col-xxs-12"
        >
          
          
          <div
            class="ct-next-step__wrapper"
          >
            
                                          
            <div
              class="ct-next-step__content-top"
            >
              Top content
            </div>
            
                          
                                          
            <div
              class="ct-next-step__inner"
            >
              
                                                            
                      


  
              <h4
                class="ct-heading ct-theme-dark ct-next-step__title"
              >
                                                                  


  
  
                <a
                  aria-label="Opens in a new tab"
                  class="ct-link ct-theme-dark ct-link--external    ct-next-step__title__link"
                  href="https://example.com"
                  target="_blank"
                >
                  

    
              
      
                  
                              
          
                    
          
                                
          
          
          
          Next Steps Title


                                    
                  <svg
                    aria-hidden="true"
                    class="ct-icon  ct-link__icon"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    

                    <path
                      d="M17.9199 6.62C17.8185 6.37565 17.6243 6.18147 17.3799 6.08C17.2597 6.02876 17.1306 6.00158 16.9999 6H6.99994C6.73472 6 6.48037 6.10536 6.29283 6.29289C6.1053 6.48043 5.99994 6.73478 5.99994 7C5.99994 7.26522 6.1053 7.51957 6.29283 7.70711C6.48037 7.89464 6.73472 8 6.99994 8H14.5899L6.28994 16.29C6.19621 16.383 6.12182 16.4936 6.07105 16.6154C6.02028 16.7373 5.99414 16.868 5.99414 17C5.99414 17.132 6.02028 17.2627 6.07105 17.3846C6.12182 17.5064 6.19621 17.617 6.28994 17.71C6.3829 17.8037 6.4935 17.8781 6.61536 17.9289C6.73722 17.9797 6.86793 18.0058 6.99994 18.0058C7.13195 18.0058 7.26266 17.9797 7.38452 17.9289C7.50638 17.8781 7.61698 17.8037 7.70994 17.71L15.9999 9.41V17C15.9999 17.2652 16.1053 17.5196 16.2928 17.7071C16.4804 17.8946 16.7347 18 16.9999 18C17.2652 18 17.5195 17.8946 17.707 17.7071C17.8946 17.5196 17.9999 17.2652 17.9999 17V7C17.9984 6.86932 17.9712 6.74022 17.9199 6.62Z"
                    />
                    

                  </svg>
                  

                  
      
      
                  <span
                    class="ct-visually-hidden"
                  >
                    (Opens in a new tab/window)
                  </span>
                </a>
                
                                              
              </h4>
              
                                      
                                      


              <div
                class="ct-paragraph ct-theme-dark ct-paragraph--regular ct-next-step__content"
              >
                
    This is the content of the next steps.  
              </div>
                                                
            </div>
            
                          
                                          
            <div
              class="ct-next-step__content-bottom"
            >
              Bottom content
            </div>
            
                                    
          </div>
          
        
        </div>
        
      
      </div>
      
    
    </div>
    
  
  </div>
  

</div>
`;

exports[`Next Steps Component renders with required attributes 1`] = `
<div>
  

  
  <div
    class="ct-next-step ct-theme-light  "
    href=""
  >
    
    
    <div
      class="container"
    >
      
      
      <div
        class="row"
      >
        
        
        <div
          class="col-xxs-12"
        >
          
          
          <div
            class="ct-next-step__wrapper"
          >
            
                                      
                                          
            <div
              class="ct-next-step__inner"
            >
              
                                                            
                      


  
              <h4
                class="ct-heading ct-theme-light ct-next-step__title"
              >
                                                                  Next Steps Title
                                              
              </h4>
              
                                      
                                      


              <div
                class="ct-paragraph ct-theme-light ct-paragraph--regular ct-next-step__content"
              >
                
    This is the content of the next steps.  
              </div>
                                                
            </div>
            
                          
                                                
          </div>
          
        
        </div>
        
      
      </div>
      
    
    </div>
    
  
  </div>
  

</div>
`;
